--- a/mia-ui/package.json
+++ b/mia-ui/package.json
@@ -8,6 +8,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "build:web": "expo build:web",
+    "export:web": "expo export",
     "test": "jest --watchAll",
     "lint": "expo lint"
   },
