Apparently Meta hallucinated a neat sounding NPM package

--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "chat-app",
-  "version": "1.0.0",
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "chatui": "^1.1.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test"
+    "name": "chat-app",
+    "version": "1.0.0",
+    "dependencies": {
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0",
+      "stream-chat": "^4.10.0",
+      "stream-chat-react": "^4.10.0"
+    },
+    "scripts": {
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "test": "react-scripts test"
+    }
   }
-}
