--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
     "version": "1.0.0",
     "dependencies": {
       "react": "^18.2.0",
-      "react-dom": "^18.2.0",
-      "stream-chat": "^4.10.0",
-      "stream-chat-react": "^4.10.0"
+      "react-dom": "^18.2.0"
     },
     "scripts": {
       "start": "react-scripts start",
