--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
     "name": "chat-app",
     "version": "1.0.0",
+    "scripts": {
+      "build": "react-scripts build",
+      "start": "react-scripts start",
+      "test": "react-scripts test"
+    },
     "dependencies": {
       "react": "^18.2.0",
-      "react-dom": "^18.2.0"
-    },
-    "scripts": {
-      "start": "react-scripts start",
-      "build": "react-scripts build",
-      "test": "react-scripts test"
+      "react-dom": "^18.2.0",
+      "react-scripts": "^5.0.1"
     }
   }
